--- a/homepage/templates/login.html
+++ b/homepage/templates/login.html
@@ -52,7 +52,7 @@
                         <div class="align-middle"> 
                             <button class="ghost-pink" type="submit">Log In</button>         
                             {# <button class="ml-2 ghost-red">Exit</button> #}
-                            <a class="btn btn-outline-light ml-2" href="{% url 'register' %}">Register</a>
+                            <a class="btn btn-outline-dark ml-4" style="color: rgb(213, 33, 165);"{% url 'register' %}">Register</a>
                         </div>
                     </div>
                 </form>
