--- a/homepage/templates/about.html
+++ b/homepage/templates/about.html
@@ -17,7 +17,7 @@
 
     <div class="align-middle"> 
         <h2 style="color:#ea2088">| About |</h3> <br>
-            <p>
+            <p style="color: #300722;">
                 Invi is a simple inventory management software created for the requirements of a company.
                 The software is capable of keeping track of incoming and outgoing stock with a dynamically rendered bill. 
                 Each supplier is provided with a profile where they can see the history of their transactions with the company.
@@ -25,7 +25,7 @@
         <br>
     </div>
         <h2 style="color:#ea2088" class="align-middle">| Features |</h3> <br>
-            <ul style="display:table; margin:0 auto;">                
+            <ul style="display:table; margin:0 auto; color: #400a35; text-size:bold;">                
                 <li>Interactive Chart to display current available stock</li>
                 <li>Stock details like current available stock are maintained</li>
                 <li>Incoming transactions are done through purchases</li>
